--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
         console.log(position);
     }
 </script>
- <!-- IP定位 -->        <p>&nbsp;</p>
-      <div align="center"><h3 class="wenzi">【友情提示,】</h3>
+ <!-- IP定位 --> 
+<p>&nbsp;</p>
+      <div align="center"><h3 class="wenzi">【友情提示，个别区域手机网络可能会打不开，WIFI网络下可正常打开短链接】</h3>
             <p>&nbsp;</p>
  <div align="center"><h4 class="wenzi">本站仅提供生成服务，对生成内容不了解也不会负责！</h4>
       <p>&nbsp;</p>
